--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,7 +9,9 @@
         require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
       </script>
     <% } %>
+    <script src="http://localhost:8098"></script>
   </head>
+  
   <body >
     <div id="app"></div>
     <!-- Set `__static` path to static files in production -->
